--- a/app/src/main/res/layout/activity_notification.xml
+++ b/app/src/main/res/layout/activity_notification.xml
@@ -7,16 +7,6 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.weiyu.androiddevelopmentartsearch.MainActivity">
+    tools:context="com.weiyu.androiddevelopmentartsearch.chapter5.NotificationActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World! this is mainactvity" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="BinderPoolActivity"
-        android:id="@+id/bt_mainactivity_toBindPool"/>
 </RelativeLayout>
